Añadir campo cc

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                     <textarea id="mensaje" type="text" name="mensaje" placeholder="Mensaje de Email" class="border border-gray-300 px-3 py-2 rounded-lg h-36"></textarea>
                 </div>
 
+                <div class="flex flex-col space-y-2">
+                    <label for="cc" class="font-regular font-medium">CC:</label>
+                    <input id="cc" type="text" name="cc" placeholder="CC Email" class="border border-gray-300 px-3 py-2 rounded-lg" />
+                </div>
+
+
                 <div id="botones" class="flex gap-5">
                     <button 
                         type="submit"
